Correct overflow auto issue on App.js with the info modal

--- a/src/css/Info.css
+++ b/src/css/Info.css
@@ -37,5 +37,5 @@
 
 .hidden-modal {
   opacity: 0;
-  right: -50%;
+  right: -80%;
 }
